cleanup: remove Cloudflare tunnel files and update .gitignore
- Remove flyvixx-backend.yml and flyvixx-frontend.yml (Cloudflare tunnel configs)
- Update .gitignore to prevent future tunneling config commits
- Add patterns for Cloudflare, ngrok, and other dev tunneling files
- Keep repository clean of personal development configurations

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,13 @@ yarn-error.log*
 !production/.env.production
 !production/.env.frontend
 
+# tunneling and development configuration files
+flyvixx-*.yml
+flyvixx-*.yaml
+*.cloudflared.*
+.ngrok*
+.ngrok2*
+
 # vercel
 .vercel
 
