--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && cp -r src/templates dist/",
     "start": "node dist/index.js",
     "add-admin": "ts-node scripts/add-admin.ts",
+    "daily-gift-reset": "ts-node scripts/daily-gift-reset.ts",
     "lint": "eslint src/**/*.ts",
     "test": "jest"
   },
@@ -31,9 +32,9 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^8.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "resend": "^6.9.1",
     "socket.io": "^4.7.4",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1",
@@ -46,6 +47,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "@types/nodemailer": "^7.0.9",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
