feat: optimize portfolio modal and balance display
- Fix portfolio modal timer stability by preventing unnecessary restarts
- Remove excessive debug logging to improve performance
- Add React.memo to prevent unnecessary re-renders
- Make balance display visible by default instead of hidden
- Add 30-day lock simulation script for testing auto-unlock functionality
- Update server package.json with new simulation script

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,10 @@
     "start": "node dist/index.js",
     "add-admin": "ts-node scripts/add-admin.ts",
     "daily-gift-reset": "ts-node scripts/daily-gift-reset.ts",
+    "simulate-deposit": "ts-node scripts/simulate-deposit.ts",
+    "test-daily-gifts": "ts-node scripts/test-daily-gift-system.ts",
+    "simulate-day-2": "ts-node scripts/simulate-day-2.ts",
+    "simulate-30-day-lock": "ts-node scripts/simulate-30-day-lock.ts",
     "lint": "eslint src/**/*.ts",
     "test": "jest"
   },
